    (Sangjin Lee via jlowe)

    HADOOP-12902. JavaDocs for SignerSecretProvider are out-of-date in
    AuthenticationFilter. (Gabor Liptak via aajisaka)

    HADOOP-12613. TestFind.processArguments occasionally fails.
    (Wei-Chiu Chuang via stevel)

    HADOOP-12989. Some tests in org.apache.hadoop.fs.shell.find occasionally
    time out. (Takashi Ohnishi via aajisaka)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

    HADOOP-5323. Trash documentation should describe its directory structure and
    configurations. (Weiwei Yang via ozawa)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (kanaka kumar avvaru via wheat9)

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-12061. Incorrect command in single cluster setup document.
    (Kengo Seki via aajisaka)

    HADOOP-12359. hadoop fs -getmerge doc is wrong.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-10365. BufferedOutputStream in FileUtil#unpackEntries() should be
    closed in finally block. (Kiran Kumar M R and Sanghyun Yun via ozawa)

    HADOOP-12006. Remove unimplemented option for `hadoop fs -ls` from
    document in branch-2.7. (Akira AJISAKA via ozawa)

    HADOOP-12213. Interrupted exception can occur when Client#stop is called.
    (Kuhu Shukla via ozawa)
    
    HADOOP-12451. Setting HADOOP_HOME explicitly should be allowed. (kasha)

    HADOOP-12230. hadoop-project declares duplicate, conflicting curator
    dependencies. (Rakesh R via aajisaka)

    HADOOP-12465. Incorrect javadoc in WritableUtils.java.