@@ -88,6 +88,9 @@ Release 2.7.3 - UNRELEASED
     HADOOP-12989. Some tests in org.apache.hadoop.fs.shell.find occasionally
     time out. (Takashi Ohnishi via aajisaka)
 
+    HADOOP-13052. ChecksumFileSystem mishandles crc file permissions.
+    (Daryn Sharp via kihwal)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
